Update .gitignore to include additional file patterns for Python, SQLite, environment variables, and project-specific directories, ensuring proper exclusion of unnecessary files from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 old/
+__pycache__/
+*.py[cod]
+*.sqlite3
+biblioshare-web/db.sqlite3
+.env
+.env.*
+venv/
+biblioshare-web/media/
+!biblioshare-web/media/.gitkeep
+node_modules/
+biblioshare-mobile/www/
+dist/
+www/
+biblioshare-web/staticfiles/
+/docs/
