--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 services:
   web:
     build:
-      context: ./biblioshare-web
+      context: .
+      dockerfile: Dockerfile
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./biblioshare-web:/app
@@ -13,7 +14,8 @@ services:
       - DEBUG=True
   migrations:
     build:
-      context: ./biblioshare-web
+      context: .
+      dockerfile: Dockerfile
     command: >
       sh -c "python manage.py makemigrations && python manage.py migrate"
     volumes:
